update embedded version

--- a/msg-Fonts-4-WEB-Specimen-2-embed.html
+++ b/msg-Fonts-4-WEB-Specimen-2-embed.html
@@ -223,21 +223,20 @@
             }
             html, body,
             .msg-text {
-                font-family: "msg Text";
+                font-family: "msg CI Text";
                 font-size: 18pt;
                 line-height: 120%;
             }
             h1, h2, h3, h4, h5, h6,
-            .msg-head {
-                font-family: "msg Head";
+            .msg-signal {
+                font-family: "msg CI Signal";
             }
             tt, code, pre, kbd, samp,
             .msg-code {
-                font-family: "msg Code";
-                /* font-size: 0.8125em; */
+                font-family: "msg CS Code";
             }
             .msg-note {
-                font-family: "msg Note";
+                font-family: "msg CS Note";
             }
             table.canvas {
                 border-collapse: collapse;
@@ -284,7 +283,8 @@
             }
             .title2 {
                 margin-top: 20px;
-                font-family: "msg Head";
+                font-family: "msg CI Signal";
+                letter-spacing: -2px;
                 font-weight: bold;
                 font-size: 42pt;
             }
@@ -338,53 +338,57 @@
             <tr>
                 <td class="left">
                     <div class="msg-text">
-                        msg Text<br/>
+                        msg CI Text<br/>
                         <table class="styles">
                             <tr><td class="left">Normal Regular</td>     <td class="right"><i>Normal Italic</i></td></tr>
                             <tr><td class="left"><b>Bold Regular</b></td><td class="right"><b><i>Bold Italic</i></td></tr>
                         </table>
                         <div class="msg-text info">
                             Derived from Adobe Source Sans Pro.<br/>
-                            For all kind of regular text.</br>
-                            (regular use)
+                            Belongs to the msg Corporate Identity (CI) set.<br/>
+                            <b>For regular body and headline text.</b></br>
+                            (all regular use)
                         </div>
                     </div>
-                    <div class="msg-head hgap">
-                        msg Head<br/>
+                    <div class="msg-signal hgap">
+                        msg CI Signal<br/>
                         <table class="styles">
                             <tr><td class="left">Normal Regular</td>     <td class="right"><i>Normal Italic</i></td></tr>
                             <tr><td class="left"><b>Bold Regular</b></td><td class="right"><b><i>Bold Italic</i></td></tr>
                         </table>
                         <div class="msg-text info">
                             Derived from Adobe Source Sans Pro.<br/>
-                            For all kind of headlines.<br/>
-                            (regular use)
+                            Belongs to the msg Corporate Identity (CI) set.<br/>
+                            <b>For signal and call-out text.</b><br/>
+                            (all regular use)
                         </div>
                     </div>
                 </td>
                 <td class="right">
                     <div class="msg-code">
-                        msg Code<br/>
+                        msg CS Code<br/>
                         <table class="styles">
                             <tr><td class="left">Normal Regular</td>     <td class="right"><i>Normal Italic</i></td></tr>
                             <tr><td class="left"><b>Bold Regular</b></td><td class="right"><b><i>Bold Italic</i></td></tr>
                         </table>
                         <div class="msg-text info">
                             Derived from Adobe Source Code Pro.<br/>
-                            For mono-spaced text (source-code) only.<br/>
-                            (exceptional and spare use only)
+                            Belongs to the msg Corporate Specialty (CS) set.<br/>
+                            <b>For mono-spaced and source-code text only.</b><br/>
+                            (exceptional and very spare use only)
                         </div>
                     </div>
                     <div class="msg-note hgap">
-                        msg Note<br/>
+                        msg CS Note<br/>
                         <table class="styles">
                             <tr><td class="left">Normal Regular</td>     <td class="right"><i>Normal Italic</i></td></tr>
                             <tr><td class="left"><b>Bold Regular</b></td><td class="right"><b><i>Bold Italic</i></td></tr>
                         </table>
                         <div class="msg-text info">
-                            Derived from ITF Kalam and Impallari Caveat.</br>
-                            For stand-alone less-words notes/hints only.</br>
-                            (exceptional and spare use only)
+                            Derived from ITF Kalam.</br>
+                            Belongs to the msg Corporate Specialty (CS) set.<br/>
+                            <b>For scripted and annotated text only.</b><br/>
+                            (exceptional and very spare use only)
                         </div>
                     </div>
                 </td>
